Use --illegal-access=permit for now
This makes some of MiniKdc tests work again.